--- a/packages/rigatoni/package.json
+++ b/packages/rigatoni/package.json
@@ -6,5 +6,11 @@
   "main": "dist/index.js",
   "devDependencies": {
     "react": "^17.0.2"
-  }
+  },
+  "babel": {
+    "extends": "../../babel.config.js"
+  },
+  "eslintConfig": {
+    "extends": "../../.eslintrc.js"
+  }  
 }
