--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lerna-npm",
-  "version": "independent",
+  "version": "1.0.0",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -13,9 +13,6 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
-    "jest": "^26.6.3",
-    "react": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -24,8 +21,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "react": "^17.0.2",
+    "react-test-renderer": "^17.0.2"
   },
   "husky": {
     "hooks": {
