--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "commit": "cz"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-jest": "^26.6.3",
+    "commitizen": "^4.2.3",
+    "cz-emoji": "^1.3.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
@@ -30,6 +35,7 @@
   },
   "husky": {
     "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "pre-commit": "lint-staged"
     }
   },
@@ -37,5 +43,13 @@
     "./**/*.{js,jsx,ts,tsx}": [
       "eslint --fix"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-emoji"
+    },
+    "cz-emoji": {
+      "skipQuestions": ["scope", "issues", "body", "breaking"]
+    }
   }
 }
