--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-jest": "^26.6.3",
     "commitizen": "^4.2.3",
-    "cz-emoji": "^1.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
@@ -46,10 +46,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-emoji"
-    },
-    "cz-emoji": {
-      "skipQuestions": ["scope", "issues", "body", "breaking"]
+      "path": "cz-conventional-changelog"
     }
   }
 }
