--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "packages/*"
   ],
   "scripts": {
-    "commit": "cz"
+    "commit": "cz",
+    "test": "lerna run test --since next"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "autoprefixer": "^10.2.5",
     "babel-jest": "^26.6.3",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
@@ -29,9 +31,13 @@
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
+    "postcss-clean": "^1.2.2",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "rollup": "^2.45.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "husky": {
     "hooks": {
