--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "commit": "cz",
-    "test": "lerna run test --since next"
+    "test": "lerna run test --since"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
