--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^10.2.5",
@@ -31,10 +32,14 @@
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
+    "node-sass": "^5.0.0",
     "postcss-clean": "^1.2.2",
+    "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0"
