--- a/packages/rigatoni/package.json
+++ b/packages/rigatoni/package.json
@@ -14,6 +14,9 @@
     "test:unit": "jest --config ../../jest.config.js",
     "test": "yarn lint && yarn test:unit"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "devDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
