--- a/packages/rigatoni/package.json
+++ b/packages/rigatoni/package.json
@@ -5,6 +5,11 @@
   "version": "1.1.0",
   "main": "dist/index.js",
   "license": "SEE LICENSE IN ../../LICENSE",
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com/dcolesDEV/lerna-npm.git",
+    "directory": "packages/rigatoni"
+  },
   "scripts": {
     "build:bundles": "rollup -c ../../rollup.config.js",
     "build:modules": "babel src -d dist --ignore **/__tests__/**,./src/index.js",
