--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,8 @@
       "conventionalCommits": true,
       "message": "chore(release): publish",
       "ignoreChanges": ["**/__tests__/**"],
-      "registry": "https://npm.pkg.github.com"
+      "registry": "https://npm.pkg.github.com",
+      "allowBranch": "master"
     }
   }
 }
