--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "commit": "cz",
-    "test": "lerna run test --since"
+    "test": "lerna run test --since",
+    "ci:publish": "lerna publish -y --canary --preid ci --dist-tag=ci"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
