--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ env:
 jobs:
   publish:
     name: Publish
-    runs-on: ubuntu-18-04
+    runs-on: ubuntu-18.04
     env:
       NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
