--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,8 @@ jobs:
           node-version: 12
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dcolesdev'
+      - name: Install
+        run: yarn install
       - name: Git Identity
         run: |
           git config --global user.name 'github-actions[bot]'
