--- a/packages/macaroni/package.json
+++ b/packages/macaroni/package.json
@@ -3,7 +3,7 @@
   "description": "An example package using lerna to deploy and manage versioning",
   "authors": "Daniel Coles <me@danielcoles.co.uk>",
   "version": "1.1.1",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "SEE LICENSE IN ../../LICENSE",
   "repository": {
     "type": "git",
