--- a/packages/macaroni/package.json
+++ b/packages/macaroni/package.json
@@ -15,15 +15,39 @@
     "build:modules": "babel src -d dist --ignore **/__tests__/**,./src/index.js",
     "build:scss": "node-sass --include-path ../../node_modules -o ./css ./scss/main.scss && postcss --config ../../postcss.config.js -r ./css/main.css",
     "build": "rimraf dist css && yarn build:bundles && yarn build:modules && yarn build:scss",
-    "lint": "eslint ./src --ext .js,.jsx",
-    "test:unit": "jest --config ../../jest.config.js",
+    "lint": "eslint --ext .js,.jsx",
+    "test:unit": "jest --config ../../jest.config.js --passWithNoTests",
     "test": "yarn lint && yarn test:unit"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
   "devDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "autoprefixer": "^10.2.5",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^26.6.3",
+    "node-sass": "^5.0.0",
+    "postcss-clean": "^1.2.2",
+    "postcss-cli": "^8.3.1",
+    "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.45.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
