--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,15 +22,15 @@ jobs:
           node-version: 12
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dcolesdev'
-      - name: Install
-        run: yarn install
       - name: Git Identity
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-      - name: Update Changed Packages
-        run: yarn ci:publish
+      - name: Release Changed Packages
+        run: |
+          yarn install
+          yarn ci:publish
         env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
