build(packages): updated package configs and deps

--- a/package.json
+++ b/package.json
@@ -7,43 +7,30 @@
   ],
   "scripts": {
     "commit": "cz",
-    "test": "lerna run test --since",
-    "ci:publish": "lerna publish -y --canary"
+    "test:all": "lerna run test",
+    "ci:test": "lerna run test --since",
+    "ci:build": "lerna run build --since",
+    "ci:install": "yarn install --frozen-lockfile",
+    "ci:version": "lerna version --conventional-commits --yes",
+    "ci:publish": "lerna publish -y"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "autoprefixer": "^10.2.5",
-    "babel-jest": "^26.6.3",
+    "@babel/cli": "^7.13.14",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
-    "node-sass": "^5.0.0",
-    "postcss-clean": "^1.2.2",
-    "postcss-cli": "^8.3.1",
+    "postcss-cli": "^5.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.45.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup": "^2.45.2"
   },
   "husky": {
     "hooks": {
