--- a/packages/gnocchi/package.json
+++ b/packages/gnocchi/package.json
@@ -3,7 +3,8 @@
   "description": "An example package using lerna to deploy and manage versioning",
   "authors": "Daniel Coles <me@danielcoles.co.uk>",
   "version": "1.3.2",
-  "main": "dist/index.js",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.js",
   "license": "SEE LICENSE IN ../../LICENSE",
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "devDependencies": {
+  "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
