--- a/packages/macaroni/package.json
+++ b/packages/macaroni/package.json
@@ -17,7 +17,7 @@
     "build": "rimraf dist css && yarn build:bundles && yarn build:modules && yarn build:scss",
     "lint": "eslint --ext .js,.jsx",
     "test:unit": "jest --config ../../jest.config.js --passWithNoTests",
-    "test": "yarn lint && yarn test:unit"
+    "test": "yarn lint && yarn test:unit -u"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
