--- a/packages/macaroni/package.json
+++ b/packages/macaroni/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.jsx",
     "test:unit": "jest --config ../../jest.config.js --passWithNoTests",
-    "test": "yarn lint && yarn test:unit"
+    "test": "yarn lint && yarn test:unit -u"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
