--- a/packages/rigatoni/package.json
+++ b/packages/rigatoni/package.json
@@ -18,7 +18,7 @@
     "build": "rimraf dist css && yarn build:bundles && yarn build:modules && yarn build:scss",
     "lint": "eslint ./src --ext .js,.jsx",
     "test:unit": "jest --config ../../jest.config.js",
-    "test": "yarn lint && yarn test:unit"
+    "test": "yarn lint && yarn test:unit -u"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
