--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ci:build": "lerna run build --since",
     "ci:install": "yarn install --frozen-lockfile",
     "ci:version": "lerna version --conventional-commits --yes",
-    "ci:publish": "lerna publish -y"
+    "ci:publish": "lerna publish -y",
+    "ci:docs": "node scripts/docs"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
@@ -24,6 +25,7 @@
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
+    "markdown-magic": "^2.0.0",
     "postcss-cli": "^5.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
