--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.45.2"
+    "rollup": "^2.45.2",
+    "sync-rpc": "^1.3.6"
   },
   "husky": {
     "hooks": {
