--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "lint-staged": {
     "./**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
+      "eslint --fix && prettier --write"
     ]
   },
   "config": {
