--- a/packages/macaroni/package.json
+++ b/packages/macaroni/package.json
@@ -32,6 +32,8 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^9.0.1",
+    "@rollup/plugin-image": "^2.0.6",
+    "@rollup/plugin-url": "^6.0.0",
     "babel-jest": "^26.6.3",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
