style(actions): re-formatted actions workflows

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,42 +1,61 @@
-name: publish
+name: Publish
+
 on:
-  pull_request:
+  push:
     branches:
       - master
-    types: [closed]
 
 env:
   CI: true
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
-  publish:
-    name: Publish
-    runs-on: ubuntu-18.04
+  publish_and_deploy:
+    name: Publish 📦 & Deploy 🚀 
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Setup Node
-        uses: actions/setup-node@v1
+
+      - name: Setup Node 🔧
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 14
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dcolesdev'
-      - name: Setup Git
+
+      - name: Setup GitHub Actions Bot 🤖
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-      - name: Install
+
+      - name: Install 🔻
         run: yarn ci:install
-      - name: Build
+
+      - name: Build 👷
         run: yarn ci:build
-      - name: Publish
+      
+      - name: Test 🧪
+        run: yarn ci:test
+
+      - name: Publish Packages 📦
         run: yarn ci:publish
-      - name: Update Docs
+
+      - name: Update Docs 📜
         run: |
           yarn ci:docs
           git commit -am "chore(docs) version update"
           git push
+
+      - name: Build Style Guide 👷
+        run: yarn styleguide:build
+        
+      - name: Deploy Style Guide 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages
+          folder: styleguide
       
