--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      
+      - name: Pull Latest Tags 🏷️
+      - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
       - name: Setup Node 🔧
         uses: actions/setup-node@v2
@@ -27,6 +32,9 @@ jobs:
 
       - name: Install 🔻
         run: yarn ci:install
+
+      - name: List Updated Packages 📦
+        run: yarn ci:changes
 
       - name: Build 👷
         run: yarn ci:build
