--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
+      
+      - name: Pull Latest Tags 🏷️
         run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
       - name: Setup Node 🔧
