ci(actions): set fetch-depth back to 0 on checkout action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,9 +17,11 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
-      
+        with:
+          fetch-depth: 0
+
       - name: Pull Latest Tags 🏷️
-        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*:refs/remotes/origin/*
 
       - name: Setup Node 🔧
         uses: actions/setup-node@v2
