ci(actions): added versioning step to pr process

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -38,3 +38,6 @@ jobs:
 
       - name: Test 🧪
         run: yarn ci:test
+
+      - name: Version Updated Packages 🏷️
+        run: yarn ci:version
