--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,7 @@
     "publish": {
       "conventionalCommits": true,
       "message": "chore(release): publish",
-      "ignoreChanges": ["**/__tests__/**"],
+      "ignoreChanges": ["**/__tests__/**, **/*.md"],
       "registry": "https://npm.pkg.github.com",
       "allowBranch": "master"
     }
