fix(actions): workaround to reattach head when versioning on current branch

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -40,4 +40,6 @@ jobs:
         run: yarn ci:test
 
       - name: Version Updated Packages 🏷️
-        run: yarn ci:version
+        run: |
+          git checkout "${GITHUB_REF:11}"          
+          yarn ci:version
