ci(actions): removed arg from version script

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Test 🧪
         run: yarn ci:test
 
+      - name: Version Updated Packages 🏷️
+        run: yarn ci:version
+
       - name: Publish Packages 📦
         run: yarn ci:publish
 
