--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -40,6 +40,4 @@ jobs:
         run: yarn ci:test
 
       - name: Version Updated Packages 🏷️
-        run: |
-          git checkout "${GITHUB_REF:11}"          
-          yarn ci:version
+        run: yarn ci:version
