ci(actions): use version cmd before publish cmd

--- a/lerna.json
+++ b/lerna.json
@@ -13,6 +13,11 @@
       "ignoreChanges": ["**/__tests__/**, **/*.md"],
       "registry": "https://npm.pkg.github.com",
       "allowBranch": "master"
+    },
+    "version": {
+      "message": "chore(release): publish",
+      "ignoreChanges": ["**/__tests__/**, **/*.md"],
+      "allowBranch": "master"
     }
   }
 }
