--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,12 +37,12 @@ jobs:
 
       - name: Build 👷
         run: yarn ci:build
-      
+
+      - name: List Updated Packages ✏️
+        run: yarn ci:changes
+
       - name: Test 🧪
         run: yarn ci:test
-
-      - name: Version Updated Packages 🏷️
-        run: yarn ci:version
 
       - name: Publish Packages 📦
         run: yarn ci:publish
