style(package.json): added homepage to root package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@dcolesdev/lerna-npm",
+  "homepage": "https://dcolesdev.github.io/lerna-npm",
   "version": "1.0.0",
   "private": true,
   "workspaces": [
