ci(action): added step to fetch tags

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Test 🧪
         run: yarn ci:test
 
+      - name: Fetch Latest Tags 🏷️
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+
       - name: Publish Packages 📦
         run: yarn ci:publish
 
