--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,15 @@
 name: Publish
 
 on:
-  push:
+  pull_request:
     branches:
       - master
+    types: [closed]
 
 env:
   CI: true
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
   publish_and_deploy:
     name: Publish 📦 & Deploy 🚀 
@@ -26,9 +26,9 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Setup Node 🔧
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 12
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dcolesdev'
 
@@ -40,14 +40,6 @@ jobs:
 
       - name: List Updated Packages ✏️
         run: yarn ci:changes
-
-      - name: Test 🧪
-        run: yarn ci:test
-
-      - name: Fetch Latest Tags 🏷️
-        run: |         
-          git fetch --tags --force
-          git tag --list
 
       - name: Publish Packages 📦
         run: yarn ci:publish
