--- a/lerna.json
+++ b/lerna.json
@@ -10,13 +10,8 @@
     "publish": {
       "conventionalCommits": true,
       "message": "chore(release): publish",
-      "ignoreChanges": ["**/__tests__/**, **/*.md"],
+      "ignoreChanges": ["**/__tests__/**"],
       "registry": "https://npm.pkg.github.com",
-      "allowBranch": "master"
-    },
-    "version": {
-      "message": "chore(release): publish",
-      "ignoreChanges": ["**/__tests__/**, **/*.md"],
       "allowBranch": "master"
     }
   }
