--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
     "ci:build": "lerna run build --since origin/master",
     "ci:test": "lerna run test --since origin/master",
     "ci:publish": "lerna publish -y",
-    "ci:docs": "node scripts/docs",
-    "styleguide:dev": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "ci:docs": "node scripts/docs"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
-    "babel-loader": "^8.2.2",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
@@ -38,8 +35,7 @@
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
-    "sync-rpc": "^1.3.6",
-    "webpack": "^5.33.2"
+    "sync-rpc": "^1.3.6"
   },
   "husky": {
     "hooks": {
