ci(release): trigger changes in each package

--- a/packages/macaroni/package.json
+++ b/packages/macaroni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcolesdev/macaroni",
-  "description": "An example config package using lerna to deploy and manage versioning",
+  "description": "An example configuration package using lerna to deploy and manage versioning",
   "authors": "Daniel Coles <me@danielcoles.co.uk>",
   "version": "1.4.1",
   "main": "index.js",
