--- a/package.json
+++ b/package.json
@@ -8,32 +8,34 @@
   "scripts": {
     "commit": "cz",
     "test:all": "lerna run test",
-    "ci:test": "lerna run test --since",
-    "ci:build": "lerna run build --since",
+    "ci:test": "lerna run test --since origin/master",
+    "ci:build": "lerna run build --since origin/master",
     "ci:install": "yarn install --frozen-lockfile",
     "ci:version": "lerna version --conventional-commits --yes",
-    "ci:publish": "lerna publish -y",
-    "ci:docs": "node scripts/docs"
+    "ci:publish": "lerna publish from-package -y --include-merged-tags",
+    "ci:docs": "node scripts/docs",
+    "styleguide:dev": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
-    "commitizen": "^4.2.3",
-    "cz-conventional-changelog": "^3.3.0",
+    "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
     "eslint": "^7.24.0",
-    "husky": "^6.0.0",
+    "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
-    "lint-staged": "^10.5.4",
     "markdown-magic": "^2.0.0",
     "postcss-cli": "^7.1.2",
     "prettier": "^2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-styleguidist": "^11.1.6",
+    "react-test-renderer": "^16.9.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
-    "sync-rpc": "^1.3.6"
+    "sync-rpc": "^1.3.6",
+    "webpack": "^5.35.0"
   },
   "husky": {
     "hooks": {
@@ -50,5 +52,11 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "browserslist": [
+    ">1%",
+    "last 1 version",
+    "Firefox ESR",
+    "not dead"
+  ]
 }
