--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "babel-loader": "^8.2.2",
+    "commitizen": "^4.2.3",
+    "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
     "eslint": "^7.24.0",
+    "husky": "^6.0.0",
     "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4",
     "markdown-magic": "^2.0.0",
     "postcss-cli": "^7.1.2",
     "prettier": "^2.2.1",
