--- a/packages/macaroni/package.json
+++ b/packages/macaroni/package.json
@@ -31,6 +31,8 @@
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@rollup/plugin-image": "^2.0.6",
+    "@rollup/plugin-url": "^6.0.0",
     "autoprefixer": "^9.0.1",
     "babel-jest": "^26.6.3",
     "enzyme-adapter-react-16": "^1.15.6",
