--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ci:build": "lerna run build --since head",
     "ci:changes": "lerna ls --since head",
     "ci:install": "yarn install --frozen-lockfile",
-    "ci:version": "lerna version --conventional-commits --yes",
+    "ci:version": "lerna version --conventional-commits --yes --no-git-tag-version",
     "ci:publish": "lerna publish from-package -y --include-merged-tags",
     "ci:docs": "node scripts/docs",
     "styleguide:dev": "styleguidist server",
