style(version) use canary versioning for feature branch bumps

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "ci:test": "lerna run test --since origin/master",
     "ci:build": "lerna run build --since origin/master",
     "ci:changes": "lerna ls --since origin/master",
-    "ci:install": "yarn install --frozen-lockfile",
-    "ci:version": "lerna version --conventional-commits --yes",
+    "ci:install": "yarn install --frozen-lockfile --skip-integrity-check --no-progress --non-interactive",
+    "ci:version": "lerna version --conventional-commits -y --include-merged-tags --canary",
     "ci:publish": "lerna publish from-package -y --include-merged-tags",
     "ci:docs": "node scripts/docs",
     "styleguide:dev": "styleguidist server",
