--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Test 🧪
         run: yarn ci:test
 
+      - name: Version Packages 🏷️
+        run: yarn ci:version
+
       - name: Publish Packages 📦
         run: yarn ci:publish
 
