feat(ci): added prerelease scripts

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ci:build": "lerna run build --since",
     "ci:changes": "lerna ls --since",
     "ci:install": "yarn install --frozen-lockfile",
+    "ci:preversion": "lerna version prerelease --conventional-prerelease --create-release github --yes",
+    "ci:prepublish": "yarn ci:build && lerna publish from-package --npm-tag next -y",
     "ci:version": "lerna version --conventional-commits --create-release github --yes",
     "ci:publish": "yarn ci:build && lerna publish from-package -y --include-merged-tags",
     "ci:docs": "node scripts/docs",
