--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,6 +9,7 @@ env:
   CI: true
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build_and_test:
@@ -28,6 +29,11 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dcolesdev'
 
+      - name: Setup GitHub Actions Bot 🤖
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
       - name: Install 🔻
         run: yarn ci:install
 
@@ -37,5 +43,8 @@ jobs:
       - name: Test 🧪
         run: yarn ci:test
 
-      - name: List Changed Packages ✏️
-        run: yarn ci:changes
+      - name: Version Prerelease Packages 🏷️
+        run: yarn ci:preversion
+      
+      - name: Publish Prerelease Packages 📦
+        run: yarn ci:prerelease
