fix(ci): corrected script name for publishing prerelease packages

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,4 +47,4 @@ jobs:
         run: yarn ci:preversion
       
       - name: Publish Prerelease Packages 📦
-        run: yarn ci:prerelease
+        run: yarn ci:prepublish
