--- a/package.json
+++ b/package.json
@@ -17,29 +17,65 @@
     "ci:version": "lerna version --conventional-commits --conventional-graduate --create-release github --yes --",
     "ci:publish": "yarn ci:build && lerna publish from-package -y --include-merged-tags",
     "ci:docs": "node scripts/docs",
-    "styleguide:dev": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:dev": "yarn styleguidist server --config ./site",
+    "styleguide:build": "yarn cross-env NODE_ENV=production styleguidist build --config ./site"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-image": "^2.0.6",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-url": "^6.0.0",
+    "@svgr/rollup": "^5.5.0",
+    "autoprefixer": "^9.0.1",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "commitizen": "^4.2.3",
+    "core-js": "^2.6.9",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.24.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "file-loader": "^6.2.0",
+    "focus-visible": "^5.2.0",
     "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
+    "jsonfile": "^6.1.0",
     "lerna": "^4.0.0",
     "markdown-magic": "^2.0.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.14.1",
+    "postcss-clean": "^1.1.0",
     "postcss-cli": "^7.1.2",
+    "postcss-loader": "^3.0.0",
     "prettier": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-markdown": "^6.0.0",
     "react-styleguidist": "^11.1.6",
     "react-test-renderer": "^16.9.0",
+    "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "sync-rpc": "^1.3.6",
+    "url-loader": "^4.1.1",
     "webpack": "^5.35.0"
   },
   "config": {
