--- a/packages/rigatoni/package.json
+++ b/packages/rigatoni/package.json
@@ -12,12 +12,12 @@
     "directory": "packages/rigatoni"
   },
   "scripts": {
-    "build:bundles": "rollup -c ../../rollup.config.js",
+    "build:bundles": "cross-env MODULES=false rollup -c ../../rollup.config.js",
     "build:modules": "babel src -d dist --ignore **/__tests__/**,./src/index.js",
     "build:scss": "node-sass --include-path ../../node_modules -o ./css ./scss/main.scss && postcss --config ../../postcss.config.js -r ./css/main.css",
     "build": "rimraf dist css && yarn build:bundles && yarn build:modules && yarn build:scss",
     "lint": "eslint ./src --ext .js,.jsx",
-    "test:unit": "jest --config ../../jest.config.js",
+    "test:unit": "cross-env BABEL_ENV=test jest --config ../../jest.config.js",
     "test": "yarn lint && yarn test:unit -u"
   },
   "publishConfig": {
