--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,9 +1,9 @@
-name: pull_request
+name: Pull Request
 
 on:
   pull_request:
-    branches: 
-    - master
+    branches:
+      - master
 
 env:
   CI: true
@@ -26,14 +26,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@dcolesdev'
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@dcolesdev"
 
       - name: Setup GitHub Actions Bot 🤖
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
       - name: Install 🔻
         run: yarn ci:install
 
@@ -45,6 +44,6 @@ jobs:
 
       - name: Version Prerelease Packages 🏷️
         run: yarn ci:preversion
-      
+
       - name: Publish Prerelease Packages 📦
         run: yarn ci:prepublish
