--- a/lerna.json
+++ b/lerna.json
@@ -9,9 +9,12 @@
   "command": {
     "publish": {
       "conventionalCommits": true,
-      "message": "chore(release): publish",
+      "message": "chore(release): publish [skip ci]",
       "ignoreChanges": ["**/__tests__/**", "**/*.md"],
       "registry": "https://npm.pkg.github.com"
+    },
+    "version": {
+      "ignore": ["**/__tests__/**", "**/*.md"]
     }
   }
 }
