--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-url": "^6.0.0",
     "@svgr/rollup": "^5.5.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "autoprefixer": "^9.0.1",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^26.6.3",
@@ -44,7 +45,6 @@
     "css-loader": "^1.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^2.9.0",
@@ -66,11 +66,11 @@
     "postcss-loader": "^3.0.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-markdown": "^6.0.0",
     "react-styleguidist": "^11.1.6",
-    "react-test-renderer": "^16.9.0",
+    "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
@@ -78,7 +78,7 @@
     "style-loader": "^0.21.0",
     "sync-rpc": "^1.3.6",
     "url-loader": "^4.1.1",
-    "webpack": "^5.35.0"
+    "webpack": "^4.17.2"
   },
   "config": {
     "commitizen": {
