--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.0.0",
+    "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@rollup/plugin-url": "^6.0.0",
     "@svgr/rollup": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "autoprefixer": "^9.0.1",
     "babel-eslint": "^9.0.0",
@@ -60,13 +65,13 @@
     "lerna": "^4.0.0",
     "markdown-magic": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.14.1",
     "postcss-clean": "^1.1.0",
     "postcss-cli": "^7.1.2",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-docgen-typescript": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.0",
     "react-styleguidist": "^11.1.6",
@@ -74,9 +79,12 @@
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
+    "sass": "^1.47.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "sync-rpc": "^1.3.6",
+    "ts-loader": "^7.0.1",
+    "typescript": "^3.8.3",
     "url-loader": "^4.1.1",
     "webpack": "^4.17.2"
   },
