--- a/packages/gnocchi/package.json
+++ b/packages/gnocchi/package.json
@@ -5,6 +5,7 @@
   "version": "1.8.17",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
+  "typings": "./src/index.d.ts",
   "license": "SEE LICENSE IN ../../LICENSE",
   "repository": {
     "type": "git",
@@ -12,11 +13,11 @@
     "directory": "packages/gnocchi"
   },
   "scripts": {
-    "build:bundles": "cross-env MODULES=false rollup -c ../../rollup.config.js",
-    "build:modules": "babel src -d dist --ignore **/__tests__/**,./src/index.js",
-    "build:scss": "node-sass --include-path ../../node_modules -o ./css ./scss/main.scss && postcss --config ../../postcss.config.js -r ./css/main.css",
+    "build:bundles": "cross-env MODULES=false rollup -c ../../rollup.config.js -- typescript",
+    "build:modules": "babel src -d dist --ignore **/__tests__/**,./src/index.js,**/*.d.ts --extensions \".js,.jsx,.ts,.tsx\"",
+    "build:scss": "sass ./scss/main.scss ./css/main.css --load-path=../../node_modules --style=expanded && postcss --config ../../postcss.config.js -r ./css/main.css",
     "build": "rimraf dist css && yarn build:bundles && yarn build:modules && yarn build:scss",
-    "lint": "eslint ./src --ext .js,.jsx",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "test:unit": "cross-env BABEL_ENV=test jest --config ../../jest.config.js",
     "test": "yarn lint && yarn test:unit -u"
   },
@@ -32,5 +33,8 @@
   },
   "eslintConfig": {
     "extends": "../../.eslintrc.js"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.14"
   }
 }
