--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.17.2"
   },
+  "resolutions": {
+    "@technote-space/doctoc": "2.4.0"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
